@@ -11,6 +11,7 @@
  8. Remove padding from track list in now-playing album info view.
  9. Refresh queue if show track numbers setting changed.
 10. Check URL is not 'null' before adding to playlist.
+11. Store 'theme' setting in local storage after reading defaults from server.
 
 2.9.3
 -----
